--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "fullstackeletro",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3050",
   "dependencies": {
     "@terrestris/react-geo": "^14.1.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
+    "commonjs": "0.0.1",
+    "consign": "^0.1.6",
+    "express": "^4.17.1",
     "google-map-react": "^2.1.9",
+    "mysql": "^2.18.1",
+    "node": "^15.4.0",
     "ol": "^6.4.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
